changes for show
